--- a/packages/amazon-bedrock/package.json
+++ b/packages/amazon-bedrock/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ai-sdk/amazon-bedrock",
-  "version": "1.0.6",
+  "name": "amazon-bedrock-anatolii-yemets",
+  "version": "1.0.7",
   "license": "Apache-2.0",
   "sideEffects": false,
   "main": "./dist/index.js",
